@@ -48,6 +48,7 @@ data:extend({
     flow_color = {r = 0.56, g = 0.422, b = 0.22}
   },
 
+  --MARK: Sulfuric acid
   {
     type = "recipe",
     name = "pm-fuel-oil-hydrosulfurisation",
@@ -56,8 +57,8 @@ data:extend({
     energy_required = 4,
     enabled = false,
     category = "pm-washing",
-    subgroup = "pm-sulfur-rnm",
-    order = "ba",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "b",
     ingredients =
     {
       PM.ingredient("pm-fuel-oils", 20, "fluid"),
@@ -80,8 +81,8 @@ data:extend({
     energy_required = 4,
     enabled = false,
     category = "pm-washing",
-    subgroup = "pm-sulfur-rnm",
-    order = "bb",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "c",
     ingredients =
     {
       PM.ingredient("pm-kerosene", 20, "fluid"),
@@ -103,8 +104,8 @@ data:extend({
     icon = "__periodic-madness__/graphics/icons/recipes/sulfur-dioxide-cracking.png",
     energy_required = 2,
     category = "chemistry",
-    subgroup = "pm-sulfur-rnm",
-    order = "c",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "d",
     enabled = false,
     allow_productivity = true,
     ingredients =
@@ -119,58 +120,14 @@ data:extend({
       PM.catalyst_chance("pm-catalyst-container", 1, 0.25, 1)
     }
   },
-  {
-    type = "recipe",
-    name = "pm-hydrogen-sulfide",
-    energy_required = 2,
-    category = "chemistry",
-    subgroup = "pm-sulfur-rnm",
-    order = "d",
-    allow_productivity = true,
-    enabled = false,
-    main_product = "pm-hydrogen-sulfide",
-    ingredients =
     {
-      PM.ingredient("pm-molybdenum-disulfide", 1),
-      PM.ingredient("pm-syngas", 20, "fluid")
-    },
-    results =
-    {
-      PM.product("pm-hydrogen-sulfide", 15, "fluid"),
-      PM.product_range("pm-carbon-dioxide-gas", 0, 5, "fluid")
-    }
-  },
-  {
-    type = "recipe",
-    name = "pm-sulfur",
-    energy_required = 4,
-    category = "chemistry",
-    subgroup = "pm-sulfur-rnm",
-    order = "e",
-    allow_productivity = true,
-    main_product = "sulfur",
-    ingredients =
-    {
-      PM.ingredient("pm-hydrogen-sulfide", 7.5, "fluid"),
-      PM.ingredient("pm-nickel-tungsten-catalyst", 1)
-    },
-    results =
-    {
-      PM.product_range("sulfur", 4, 10),
-      PM.product_range("water", 0, 5, "fluid"),
-      PM.catalyst_chance("pm-nickel-tungsten-catalyst", 1, 0.85, 1),
-      PM.catalyst_chance("pm-catalyst-container", 1, 0.15, 1)
-    }
-  },
-
-  {
     type = "recipe",
     name = "pm-sulfur-dioxide",
     enabled = false,
     energy_required = 2,
     category = "pm-moltening",
-    subgroup = "pm-sulfur-rnm",
-    order = "f",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "e",
     main_product = "pm-sulfur-dioxide",
     ingredients =
     {
@@ -193,8 +150,8 @@ data:extend({
     enabled = false,
     energy_required = 3,
     category = "pm-acids",
-    subgroup = "pm-sulfur-rnm",
-    order = "g",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "f",
     ingredients =
     {
       PM.ingredient("pm-sulfur-dioxide", 10, "fluid"),
@@ -216,8 +173,8 @@ data:extend({
     enabled = false,
     energy_required = 6,
     category = "pm-acids",
-    subgroup = "pm-sulfur-rnm",
-    order = "h",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "g",
     allow_productivity = true,
     ingredients =
     {
@@ -235,8 +192,8 @@ data:extend({
     enabled = false,
     energy_required = 6,
     category = "pm-washing",
-    subgroup = "pm-sulfur-rnm",
-    order = "i",
+    subgroup = "pm-sulfuric-acid-rnm",
+    order = "h",
     allow_productivity = true,
     main_product = "sulfuric-acid",
     ingredients =
@@ -250,7 +207,71 @@ data:extend({
       PM.catalyst_chance("pm-empty-glass-ampule", 1, 0.8, 1)
     }
   },
+--MARK: Sulfur
+
+  {
+    type = "recipe",
+    name = "pm-hydrogen-sulfide",
+    energy_required = 2,
+    category = "chemistry",
+    subgroup = "pm-sulfur-rnm",
+    order = "a",
+    allow_productivity = true,
+    enabled = false,
+    main_product = "pm-hydrogen-sulfide",
+    ingredients =
+    {
+      PM.ingredient("pm-molybdenum-disulfide", 1),
+      PM.ingredient("pm-syngas", 20, "fluid")
+    },
+    results =
+    {
+      PM.product("pm-hydrogen-sulfide", 15, "fluid"),
+      PM.product_range("pm-carbon-dioxide-gas", 0, 5, "fluid")
+    }
+  },
+  {
+    type = "recipe",
+    name = "pm-sulfur",
+    energy_required = 4,
+    category = "chemistry",
+    subgroup = "pm-sulfur-rnm",
+    order = "b",
+    allow_productivity = true,
+    main_product = "sulfur",
+    ingredients =
+    {
+      PM.ingredient("pm-hydrogen-sulfide", 7.5, "fluid"),
+      PM.ingredient("pm-nickel-tungsten-catalyst", 1)
+    },
+    results =
+    {
+      PM.product_range("sulfur", 4, 10),
+      PM.product_range("water", 0, 5, "fluid"),
+      PM.catalyst_chance("pm-nickel-tungsten-catalyst", 1, 0.85, 1),
+      PM.catalyst_chance("pm-catalyst-container", 1, 0.15, 1)
+    }
+  },
 })
 
 data.raw["item"]["sulfur"].subgroup = "pm-sulfur-rnm"
-data.raw["item"]["sulfur"].order = "a"
+data.raw["item"]["sulfur"].order = "b"
+
+data.raw["recipe"]["sulfuric-acid"].energy_required = 4
+data.raw["recipe"]["sulfuric-acid"].category = "pm-mixing"
+data.raw["recipe"]["sulfuric-acid"].subgroup = "pm-sulfuric-acid-rnm"
+data.raw["recipe"]["sulfuric-acid"].order = "a"
+data.raw["recipe"]["sulfuric-acid"].main_product = "sulfuric-acid"
+data.raw["recipe"]["sulfuric-acid"].ingredients =
+{
+  PM.ingredient("pm-ferrum", 3),
+  PM.ingredient("pm-patina", 3),
+  PM.ingredient("pm-acidic-water", 5, "fluid"),
+  PM.ingredient("sulfur", 4)
+}
+data.raw["recipe"]["sulfuric-acid"].results =
+{
+  PM.product_chance("pm-ferrum", 3, 0.5),
+  PM.product_chance("pm-patina", 3, 0.5),
+  PM.product("sulfuric-acid", 10, "fluid")
+}
